# saturn

./: .prettierignore  BUILD.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build-tauri.yml
patches/: y-codemirror.next.patch
src/: main.ts  style.css  vite-env.d.ts
src-backend/: Cargo.toml
src-backend/src/: build.rs  channels.rs  decode.rs  device.rs  display.rs  execution.rs  hex_format.rs  lib.rs  regions.rs  shortcuts.rs  syscall.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: access_manager.rs  build.rs  debug.rs  display.rs  export.rs  lib.rs  main.rs  menu.rs  state.rs  testing.rs  time.rs  watch.rs
src-tauri/src/midi/: fetch.rs  handler.rs  protocol.rs
src-wasm/: Cargo.toml
src-wasm/src/: console.rs  events.rs  lib.rs  time.rs
src/components/: BuildInfo.vue  Cursor.vue  EditorBody.vue  ErrorOverlay.vue  ExportModal.vue  FileOpenDialog.vue  FileSaveDialog.vue  FindOverlay.vue  FindWindow.vue  GotoOverlay.vue  MenuButton.vue  Modal.vue  SaveModal.vue  SelectionOverlay.vue  SettingsModal.vue  Suggestions.vue  SymbolHighlightOverlay.vue  Tab.vue  TabBar.vue  TabBarItems.vue
src/components/console/: BitmapTab.vue  BreakTab.vue  Console.vue  ConsoleTab.vue  MemoryTab.vue  NumberField.vue  RegisterItem.vue  RegistersTab.vue  TestsTab.vue  ToggleField.vue
src/state/: backend.ts  console-data.ts  state.ts
src/utils/: breakpoints.ts  cursor.ts  debug.ts  editor.ts  events.ts  find.ts  goto.ts  highlights.ts  midi.ts  save-modal.ts  settings.ts  storage.ts  suggestions.ts  symbol-highlight.ts  tabs.ts  tinysynth.d.ts  tinysynth.js  virtualization.ts  window.ts
src/utils/definitions/: midicube.d.ts
src/utils/events/: events.ts  tauri-shortcuts.ts  web-shortcuts.ts
src/utils/languages/: language.ts  plain.ts  suggestions.ts
(+33 files in other folders)
